templates/iptables.backup.rules
*filter

#  Allows all loopback (lo0) traffic and drop all traffic to 127/8 that doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT -i ! lo -d 127.0.0.0/8 -j REJECT


#  Accepts all established inbound connections
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

#  Allows all outbound traffic
#  You can modify this to only allow certain traffic
-A OUTPUT -j ACCEPT

# http/https
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

# ???
-A INPUT -p tcp --dport 1608 -j ACCEPT

# mysql
-A INPUT -p tcp --dport 3306 -j ACCEPT

# mysql slaves
-A INPUT -p tcp --dport 4949 -j ACCEPT 

# queue servers
-A INPUT -p tcp --dport 22133 -j ACCEPT

# cass
-A INPUT -p tcp --dport 9160 -j ACCEPT
-A INPUT -p tcp --dport 9161 -j ACCEPT
-A INPUT -p tcp --dport 4949 -j ACCEPT
-A INPUT -p tcp --dport 7000 -j ACCEPT
-A INPUT -p tcp --dport 7001 -j ACCEPT

# redis
-A INPUT -p tcp --dport 6379 -j ACCEPT
-A INPUT -p tcp --dport 6380 -j ACCEPT
-A INPUT -p tcp --dport 6381 -j ACCEPT
-A INPUT -p tcp --dport 6382 -j ACCEPT

# mongo
-A INPUT -p tcp --dport 27017 -j ACCEPT

# memcache
-A INPUT -p tcp --dport 11211 -j ACCEPT

# rabbitmq
-A INPUT -p tcp --dport 5672 -j ACCEPT

#  Allows SSH connections
#
# THE -dport NUMBER IS THE SAME ONE YOU SET UP IN THE SSHD_CONFIG FILE
#
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

# Allow ping
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT


# log iptables denied calls
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# Reject all other inbound - default deny unless explicitly allowed policy
-A INPUT -j REJECT
-A FORWARD -j REJECT
